# rivulet

./: .gitignore  .stylish-haskell.yaml  README.md  rivulet.cabal  stack.yaml
app/: Main.hs
protocol/: gen-protocols.sh
scripts/: demo.sh  run-tests.sh
src/: Rivulet.hs
src/Rivulet/: DSL.hs  Manager.hs  Monad.hs  Types.hs
src/Rivulet/DSL/: Combinators.hs  Keys.hs  Keysyms.hs  Layout.hs
src/Rivulet/FFI/: Client.hs  Protocol.hs
src/Rivulet/Foreign/: river-layer-shell-v1.c  river-layer-shell-v1.h  river-window-management-v1.c  river-window-management-v1.h  river-xkb-bindings-v1.c  river-xkb-bindings-v1.h  rivulet_helpers.c  rivulet_helpers.h
src/Rivulet/Manager/: Callbacks.hs  Log.hs  Runtime.hs
